src/objects/Plan__c.object
<CustomObject>
    <description>NOTES Plan object is Master-detail to Persons Being Served. (PENDING SECURITY MODEL FINALIZATION)</description>
    <fields>
        <fullName>Account_Owner_Name__c</fullName>
        <formula>Person_Being_Served__r.Account.Owner_Copy__r.myFullName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account_Owner_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admission__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Admission</label>
        <referenceTo>Admission__c</referenceTo>
        <relationshipLabel>Plans</relationshipLabel>
        <relationshipName>Plans</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Anticipated_Transition_Date__c</fullName>
        <description>Anticipated date of Transition/Level of Care Change/Discharge Plan</description>
        <inlineHelpText>Anticipated date of Transition/Level of Care Change/Discharge Plan</inlineHelpText>
        <label>Anticipated Transition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Refinement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Last_Reviewed__c</fullName>
        <inlineHelpText>This is for users to manually enter the date the plan was reviewed in order to receive notifications.</inlineHelpText>
        <label>Date Last Reviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Service_Started__c</fullName>
        <description>TODO: Create a cross object workflow to update the date from a child progress note</description>
        <inlineHelpText>This field auto fills based on the date the first Progress Note&apos;s create date associated to this Plan</inlineHelpText>
        <label>Date Service Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <formula>Person_Being_Served__r.Birthdate</formula>
        <inlineHelpText>The birthday of the person being served.</inlineHelpText>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Till_Expiration__c</fullName>
        <formula>Plan_Expiration_Date__c -  TODAY()</formula>
        <label>Days Till Expiration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <defaultValue>now()</defaultValue>
        <description>Date the Plan should be implemented</description>
        <inlineHelpText>The date the Plan can be implemented providing all approvals are on file</inlineHelpText>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_Override__c</fullName>
        <inlineHelpText>Only fill in the expiration date of the plan here if your state requires an expiration date other than 1 year after the effective date of the plan.</inlineHelpText>
        <label>Expiration Date Override</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this makes the plan READ ONLY. NOTE: This can only be unchecked and undone by System Administrators!</inlineHelpText>
        <label>External Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Family_Member_Other__c</fullName>
        <formula>Person_Being_Served__r.Family_Member_Other__c</formula>
        <inlineHelpText>List of family members and other relationships. 
e.g siblings or extended family that may live with the person</inlineHelpText>
        <label>Family Member/Other</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency_Duration__c</fullName>
        <label>Frequency &amp; Duration</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Guardian1_Name__c</fullName>
        <formula>Person_Being_Served__r.Guardian1_Name__c</formula>
        <inlineHelpText>Guardian or parent of person being served.</inlineHelpText>
        <label>Guardian1 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian2_Name__c</fullName>
        <formula>Person_Being_Served__r.Guardian2_Name__c</formula>
        <inlineHelpText>Guardian or parent of person being served.</inlineHelpText>
        <label>Guardian2 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian_Phone_Number__c</fullName>
        <formula>Person_Being_Served__r.Guardian_Phone_Number__c</formula>
        <inlineHelpText>Phone Number of a Guardian or Parent.</inlineHelpText>
        <label>Guardian Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Name__c</fullName>
        <description>The plan should populate the individuals name of who the plan pertains to on the screen. More elements are usually captured but that should be found in the &quot;referral/client data such as their Date of Birth, Medicaid #, AVATAR# etc.</description>
        <formula>&quot;&quot;
&amp; Admission__r.Person_Being_Served__r.FirstName
&amp; &quot; &quot;
&amp; Admission__r.Person_Being_Served__r.LastName</formula>
        <inlineHelpText>The plan should populate the individuals name of who the plan pertains to on the screen. More elements are usually captured but that should be found in the &quot;referral/client data such as their Date of Birth, Medicaid #, AVATAR# etc.</inlineHelpText>
        <label>Person Being Served (full name)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Long_term_Goal_1__c</fullName>
        <label>Long-term Goal 1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Long_term_Goal_2__c</fullName>
        <label>Long-term Goal 2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Long_term_Goal_3__c</fullName>
        <label>Long-term Goal 3</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medications__c</fullName>
        <description>TODO: To support reporting on this field, consider breaking it out into its own object.
List the following
(1) Medication Name
(2)Dose
(3)Plans for Change-including Rate of Detox
(4)Physician who prescribed the medication</description>
        <inlineHelpText>TODO: To support reporting on this field, consider breaking it out into its own object.
List the following
(1) Medication Name
(2)Dose
(3)Plans for Change-including Rate of Detox
(4)Physician who prescribed the medication</inlineHelpText>
        <label>Medications</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PBS_Template_Billing_Id__c</fullName>
        <formula>Person_Being_Served__r.Avatar_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PBS Template Billing Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBS_Template_Name__c</fullName>
        <formula>Person_Being_Served__r.FirstName+&apos; &apos;+LEFT(Person_Being_Served__r.LastName,1)+&apos;.&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PBS Template Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Being_Served__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Being Served</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Plans</relationshipLabel>
        <relationshipName>Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Description__c</fullName>
        <description>A high-level description of the plan. Details about goals, objectives and interventions should be described in child goal, objective and interventions records.</description>
        <label>Plan Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Plan_Expiration_Date__c</fullName>
        <label>Plan Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Hidden__c</fullName>
        <label>Plan # (Hidden)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Location_Names__c</fullName>
        <label>Plan Location Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <description>A short summary of the plan</description>
        <label>Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Number__c</fullName>
        <displayFormat>Pl - {000000}</displayFormat>
        <label>Plan Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Plan_Program_Names__c</fullName>
        <label>Plan Program Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Progress_Since_Last_Plan__c</fullName>
        <description>(Some states have Check Boxes) MA &amp; PA each have 3 check boxes Ex: Check box to indicate progress 
(1) Partially Met
(2) Not Met
(3) Met&quot;</description>
        <inlineHelpText>(Some states have Check Boxes) MA &amp; PA each have 3 check boxes Ex: Check box to indicate progress 
(1) Partially Met
(2) Not Met
(3) Met&quot;</inlineHelpText>
        <label>Progress Since Last Plan</label>
        <picklist>
            <picklistValues>
                <fullName>Partially Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Met</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Read_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedule_A_Time_Dependent_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be solely used by 2 workflows for a recurring &apos;Notification of Service Plan Review&apos; to be sent to the owner of the Plan record. 
Manually editing this field may break the workflow logic.</description>
        <label>Schedule A Time Dependent Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>TEXT(Admission__r.State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Interventions__c</fullName>
        <label>Total Interventions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Objectives__c</fullName>
        <label>Total Objectives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Short_Term_Goals__c</fullName>
        <label>Total Short-Term Goals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Valid_Interventions__c</fullName>
        <label>Total Valid Interventions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Valid_Objectives__c</fullName>
        <label>Total Valid Objectives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Valid_Short_Term_Goals__c</fullName>
        <label>Total Valid Short-Term Goals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Plan_Expiration_Date__c</columns>
        <columns>Person_Being_Served__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IJ00000000JNEMA2_00NJ0000000IBXsMAO</fullName>
        <active>false</active>
        <field>Progress_Note__c.Plan__c</field>
        <filterItems>
            <field>Plan__c.Admission__c</field>
            <operation>equals</operation>
            <valueField>$Source.Person_Being_Served__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Progress Note_Plan</name>
        <sourceObject>Progress_Note__c</sourceObject>
    </namedFilters>
    <pluralLabel>Plans</pluralLabel>
    <recordTypes>
        <fullName>PA_Periodic_Services</fullName>
        <active>true</active>
        <label>Periodic Services</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Do_not_allow_Admission_change</fullName>
        <active>true</active>
        <description>The Admission can not be updated on the Plan, this rule prevents that from happening.</description>
        <errorConditionFormula>ischanged( Admission__c )</errorConditionFormula>
        <errorMessage>The Admission can not be updated on the Plan.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Edit_on_External_Plan</fullName>
        <active>true</active>
        <errorConditionFormula>and(Read_Only__c =True, $User.ProfileId &lt;&gt;&quot;00eU0000000myCw&quot;)</errorConditionFormula>
        <errorMessage>You do not have access to modify an external plan or the Plan is over 12 months old and can no longer be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_Active_Plan_Children_Count</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Total_Interventions__c =0 ||  Total_Objectives__c =0 ||  Total_Short_Term_Goals__c =0, LOWER(TEXT(Status__c)) = &apos;active&apos;)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>A PLAN can&apos;t be active until it has at least 1 Short Term Goal, with 1 Objective and 1 Intervention. The Short-Term Goal, Objective and Intervention must also have a related Service assignment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_Active_Plan_Total_Against_Valid</fullName>
        <active>true</active>
        <errorConditionFormula>AND( $User.Username != &apos;integration@thementornetwork.com.prod.staging&apos;, Total_Valid_Interventions__c != Total_Interventions__c || 
Total_Valid_Objectives__c != Total_Objectives__c ||  
Total_Valid_Short_Term_Goals__c !=Total_Short_Term_Goals__c, LOWER(TEXT(Status__c)) = &apos;active&apos;)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>A plan can&apos;t be active until all Short Term Goal, Objectives, and Interventions have at least one Service Assignment. The Short-Term Goal, Objective and Intervention must also have a related Service assignment.</errorMessage>
    </validationRules>
</CustomObject>